calculator heading deleted

--- a/new.html
+++ b/new.html
@@ -16,7 +16,7 @@
     <nav class="navbar navbar-light bg-danger">
         <a class="navbar-brand" href="#">
           <img src="calc.jfif" width="30" height="30" class="d-inline-block align-top" alt="">
-          Calculator ApP
+          Calculator
         </a>
     </nav>
     <div class="container">
@@ -24,7 +24,7 @@
             <div class="col-md-4 border-primary text-center">
                 <!-- main div of calculator -->
                 <div class="container border border-danger">
-                    <h1>Calculator</h1>
+                    
                 <div class="row myMargin">
                     <input type="number"class="border border-primary">
                     <label for="input1">input #1</label>
